test/deprecated/IO/localesForRegion.good
localesForRegion.chpl:5: warning: file.localesForRegion is deprecated
$CHPL_HOME/modules/standard/IO.chpl:nnnn: In method 'localesForRegion':
$CHPL_HOME/modules/standard/IO.chpl:nnnn: error: unresolved call '==(string, c_ptrConst(uint(8)))'
$CHPL_HOME/modules/standard/CTypes.chpl:nnnn: note: this candidate did not match: ==(a: c_ptr, b: c_void_ptr)
$CHPL_HOME/modules/standard/IO.chpl:nnnn: note: because actual argument #1 with type 'string'
$CHPL_HOME/modules/standard/CTypes.chpl:nnnn: note: is passed to formal 'a: c_ptr'
$CHPL_HOME/modules/standard/IO.chpl:nnnn: note: other candidates are:
$CHPL_HOME/modules/standard/CTypes.chpl:nnnn: note:   ==(a: c_void_ptr, b: c_ptr)
$CHPL_HOME/modules/standard/CTypes.chpl:nnnn: note:   ==(a: c_ptrConst, b: c_void_ptr)
note: and xxx other candidates, use --print-all-candidates to see them
